syntax = "proto3";

import "user.proto";
import "product.proto";
import "payment.proto";
import "shipping.proto";
import "common/enums.proto";

package order;

service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message Product {
  string id = 1;
  string product_name = 2;
}


message OrderItem {
  string id = 1;
  string order_id = 2;
  string product_id = 3;
  int32 qty = 4;
  int32 product_price = 5;
  Product product = 6;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}


message Order {
  string id = 1;
  string user_id = 2;
  string order_no = 3;
  int32 amount = 4;
  User user = 5;
  repeated OrderItem order_items = 6;
  // repeated shipping.Shipping shipping = 7;
  // repeated payment.Payment payment = 8;
}
